--- a/Doc/Notebooks/BackboneStatistics.ipynb
+++ b/Doc/Notebooks/BackboneStatistics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:22a0daa48367ea1072ae001719386b4632e41a02287ac98768b97f2a1b649960"
+  "signature": "sha256:0afe8b4cc52c6caf08a15e7dbd9f53420a77e2da66b73d5d31712a5a1c6f0ec5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -647,17 +647,24 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---> nonparallel plm solves the problem."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "gc = gephi.streaming.GephiStreamingClient()\n",
-      "G = readGraph(\"../../scripts/BackboneEvaluation/input/Tennessee95.graphml\", Format.GraphML)\n",
+      "G = readGraph(\"../../scripts/BackboneEvaluation/input/karate.graph\", Format.METIS)\n",
       "G.indexEdges()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -665,6 +672,9 @@
      "input": [
       "c1 = community.detectCommunities(G, algo=community.PLM(refine=False, par='none'))\n",
       "c2 = community.detectCommunities(G, algo=community.PLM(refine=False, par='none'))\n",
+      "\n",
+      "print(c1)\n",
+      "print(c2)\n",
       "\n",
       "_nmi = community.NMIDistance()\n",
       "nmi = _nmi.getDissimilarity(G, c1, c2)\n",
@@ -677,16 +687,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(none,,parallel coarsening) detected communities in 2.91845440864563 [s]\n",
+        "PLM(none,,parallel coarsening) detected communities in 0.06443476676940918 [s]\n",
         "solution properties:\n",
-        "-------------------  ----------\n",
-        "# communities          16\n",
-        "min community size      2\n",
-        "max community size   3627\n",
-        "avg. community size  1061.19\n",
-        "modularity              0.40998\n",
-        "-------------------  ----------\n",
-        "PLM(none,,parallel coarsening) detected communities in 2.8785839080810547 [s]"
+        "-------------------  ---------\n",
+        "# communities         4\n",
+        "min community size    5\n",
+        "max community size   12\n",
+        "avg. community size   8.5\n",
+        "modularity            0.418803\n",
+        "-------------------  ---------\n",
+        "PLM(none,,parallel coarsening) detected communities in 0.04831743240356445 [s]"
        ]
       },
       {
@@ -695,18 +705,27 @@
        "text": [
         "\n",
         "solution properties:\n",
-        "-------------------  ----------\n",
-        "# communities          16\n",
-        "min community size      2\n",
-        "max community size   3627\n",
-        "avg. community size  1061.19\n",
-        "modularity              0.40998\n",
-        "-------------------  ----------\n",
-        "0.0\n"
+        "-------------------  ---------\n",
+        "# communities         4\n",
+        "min community size    5\n",
+        "max community size   12\n",
+        "avg. community size   8.5\n",
+        "modularity            0.418803\n",
+        "-------------------  ---------\n",
+        "<_NetworKit.Partition object at 0x7f5b53c31e90>\n",
+        "<_NetworKit.Partition object at 0x7f5b53e8fb20>\n",
+        "0.0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
