Using exact diameter calculation in bbproperties
--HG--
branch : sparsification

--- a/Doc/Notebooks/BackboneStatistics.ipynb
+++ b/Doc/Notebooks/BackboneStatistics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6214cb066fece39b6e88ebb5aa47da68a019f626e14cb9d36aef495e4316bbd0"
+  "signature": "sha256:73a8e6c8307d6daa9fa194fdfee309c52f063e6404f1987c51c1feebd8f9f847"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -723,13 +723,21 @@
      "collapsed": false,
      "input": [
       "gc = gephi.streaming.GephiStreamingClient()\n",
-      "G = readGraph(\"../../scripts/BackboneEvaluation/input/karate.graph\", Format.METIS)\n",
+      "G = readGraph(\"../../scripts/BackboneEvaluation/input/kitEmail.graphml\", Format.GraphML)\n",
       "G.indexEdges()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "identified graph as weighted\n"
+       ]
+      }
+     ],
+     "prompt_number": 109
     },
     {
      "cell_type": "code",
@@ -749,16 +757,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(none,,parallel coarsening) detected communities in 0.06443476676940918 [s]\n",
+        "PLM(none,,parallel coarsening) detected communities in 0.15828442573547363 [s]\n",
         "solution properties:\n",
-        "-------------------  ---------\n",
-        "# communities         4\n",
-        "min community size    5\n",
-        "max community size   12\n",
-        "avg. community size   8.5\n",
-        "modularity            0.418803\n",
-        "-------------------  ---------\n",
-        "PLM(none,,parallel coarsening) detected communities in 0.04831743240356445 [s]"
+        "-------------------  ----------\n",
+        "# communities         44\n",
+        "min community size     1\n",
+        "max community size   287\n",
+        "avg. community size   42.9545\n",
+        "modularity             0.792731\n",
+        "-------------------  ----------\n",
+        "PLM(none,,parallel coarsening) detected communities in 0.13128948211669922 [s]"
        ]
       },
       {
@@ -767,15 +775,20 @@
        "text": [
         "\n",
         "solution properties:\n",
-        "-------------------  ---------\n",
-        "# communities         4\n",
-        "min community size    5\n",
-        "max community size   12\n",
-        "avg. community size   8.5\n",
-        "modularity            0.418803\n",
-        "-------------------  ---------\n",
-        "<_NetworKit.Partition object at 0x7f5b53c31e90>\n",
-        "<_NetworKit.Partition object at 0x7f5b53e8fb20>\n",
+        "-------------------  ----------\n",
+        "# communities         44\n",
+        "min community size     1\n",
+        "max community size   287\n",
+        "avg. community size   42.9545\n",
+        "modularity             0.792731\n",
+        "-------------------  ----------"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "0.0"
        ]
       },
@@ -787,7 +800,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
@@ -797,8 +810,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 22
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Could not connect to the gephi streaming plugin. Did you start the streaming master server in gephi?\n"
+       ]
+      }
+     ],
+     "prompt_number": 111
     },
     {
      "cell_type": "heading",
@@ -811,10 +832,49 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "diameter = properties.Diameter.estimatedDiameterRange(G, 0)[0]\n",
+      "print(diameter)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "7\n"
+       ]
+      }
+     ],
+     "prompt_number": 112
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "--> failed only for weighted graphs. Now using exact diameter calculation on the largest connected component."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "diameter = properties.Diameter.exactDiameter(workflows.extractLargestComponent(G))\n",
+      "print(diameter)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "7\n"
+       ]
+      }
+     ],
+     "prompt_number": 115
     },
     {
      "cell_type": "heading",
